# embedded-rust

./: README.md  flake.nix
esp32c6-test/access_point/: Cargo.toml
esp32c6-test/access_point/src/: main.rs
esp32c6-test/advanced-serial/: Cargo.toml
esp32c6-test/advanced-serial/src/: main.rs
esp32c6-test/embassy_hello_world/: Cargo.toml
esp32c6-test/embassy_hello_world/src/: main.rs
esp32c6-test/hcsr04/: Cargo.toml
esp32c6-test/hcsr04/src/: main.rs
esp32c6-test/hello-rgb/: Cargo.toml  rust-toolchain.toml
esp32c6-test/hello-rgb/src/: main.rs
esp32c6-test/i2c-display/: Cargo.toml
esp32c6-test/i2c-display/src/: main.rs
esp32c6-test/multiple-leds/: Cargo.toml
esp32c6-test/multiple-leds/src/: main.rs
esp32c6-test/servo-motor/: Cargo.toml
esp32c6-test/servo-motor/src/: main.rs  sg90.rs
esp32c6-test/timer_interrupt/: Cargo.toml
esp32c6-test/timer_interrupt/src/: main.rs
i2c/: Cargo.toml
i2c/.cargo/: config
i2c/src/: main.rs
led-compass/: Cargo.toml
led-compass/src/: calibration.rs  led.rs  main.rs
led-heart/: Cargo.toml
led-heart/src/: main.rs
led-roulette/: Cargo.toml
led-roulette/src/: main.rs
punch-o-meter/: Cargo.toml
punch-o-meter/src/: main.rs
speaker/: Cargo.toml
speaker/src/: main.rs
uart/: Cargo.toml
uart/src/: main.rs  serial_setup.rs
