[package]
name = "i2c-display"
version = "0.1.0"
authors = ["Anthony Camarillo <anthony.camarillo.96@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32c6" ] }
esp-println = { version = "0.9.0", features = ["esp32c6", "log"] }
log = { version = "0.4.20" }
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
embedded-hal-02 = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
embedded-hal-02 = ["esp-hal/embedded-hal-02"]
